--- a/examples/calculator/.env.example
+++ b/examples/calculator/.env.example
@@ -1,1 +1,14 @@
+# OpenAI
 OPENAI_API_KEY=
+OPENAI_MODEL=
+OPENAI_AUDIO_TO_TEXT_MODEL_ID=
+
+# Gemini
+GEMINI_API_KEY=
+GEMINI_MODEL=
+
+# General
+DEFAULT_PROVIDER=
+DEFAULT_MODEL=
+LOG_LEVEL=
+REQUEST_TIMEOUT=
