--- a/examples/image/.env.example
+++ b/examples/image/.env.example
@@ -1,4 +1,14 @@
+# OpenAI
 OPENAI_API_KEY=
-DEFAULT_MODEL=gpt-4o-mini
-LOG_LEVEL=INFO
-TIMEOUT=60
+OPENAI_MODEL=
+OPENAI_AUDIO_TO_TEXT_MODEL_ID=
+
+# Gemini
+GEMINI_API_KEY=
+GEMINI_MODEL=
+
+# General
+DEFAULT_PROVIDER=
+DEFAULT_MODEL=
+LOG_LEVEL=
+REQUEST_TIMEOUT=
